Hero section updates

--- a/assets/app-tailwind.css
+++ b/assets/app-tailwind.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 
 
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
+
 .tw-revert ol, .tw-revert ul, .tw-revert menu {
   list-style: revert;
   margin: revert;
