--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -76,6 +76,12 @@
       padding-top: 0.5rem;
     }
   }
+
+  sticky-header {
+    transition: all;
+    transition-duration: 300ms;
+    transition-timing-function: ease-in-out;
+  }
 </style>
 
 {%- style -%}
