--- a/sections/tc-homepage-hero.liquid
+++ b/sections/tc-homepage-hero.liquid
@@ -5,20 +5,20 @@
     height: 100%;
     position: relative;
     color: white;
-    padding-top: calc(4rem + var(--dynamic-header-height));
+    padding-top: calc(5rem + var(--dynamic-header-height));
     margin-top: calc(-1 * var(--dynamic-header-height));
     margin-bottom: {{ section.settings.margin_bottom }}px;
     display: flex;
     flex-direction: column;
     overflow: visible;
-    {% if section.settings.max_height != 0 %} max-height: {{ section.settings.max_height }}px {% endif %}
 }
 
 .hero-blocks {
-  /* text-align: center; */
+  text-align: center;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 2.5rem;
+  margin: 6rem auto 10rem auto;
 }
 
 
@@ -29,7 +29,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 95%;
+  height: 80%;
 }
 
 .homepage-hero-background video {
@@ -51,8 +51,8 @@
   font-weight: 400;
   color: white;
   font-size: 3.25rem;
-  line-height: 1em;
-  letter-spacing: -0.02em;
+  line-height: 1.2em;
+  letter-spacing: -0.01em;
 }
 
 .hero-heading strong {
@@ -66,8 +66,10 @@
 
 .hero-text {
   font-size: 1.4rem;
-  line-height: 1.2em;
+  line-height: 1.5em;
   margin: 0 auto;
+  margin-bottom: 2rem;
+  font-weight: 200;
 }
 
 @media (max-width: 330px) {
@@ -97,16 +99,22 @@
 .hero-button-container {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 75%;
   gap: 2rem;
+  margin: 0 auto;
 }
 
 .hero-button-container .button {
   flex-shrink: 0;
   background: var(--tw-color-orange-500);
   color: white;
-  letter-spacing: inherit;
-  font-size: 1.4rem;
+  /* letter-spacing: inherit; */
+  font-size: 1.6rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-weight: 400;
+  font-family: "Inter Tight"
+  , sans-serif;
 }
 
 .hero-button-container .button--secondary {
@@ -130,7 +138,7 @@
 }
 
 .hero-media-container video {
-  border-radius: 0.5rem;
+  /* border-radius: 0.5rem; */
   z-index: 2;
 }
 
@@ -142,12 +150,16 @@
   top: 0;
   bottom: 30%;
   z-index: 1;
-  box-shadow: 0 0 160px 6px rgba(255, 140, 0, 0.3);
+  box-shadow: 0 0 160px 6px rgba(255, 140, 0, 0.15);
 }
 
 @media (min-width: 450px) {
   .hero-blocks {
     text-align: center;
+  }
+
+  .hero-heading {
+    font-size: 4rem;
   }
 
 
@@ -220,6 +232,8 @@
 
 .hero-button-container .button {
   font-size: 1.6rem;
+  padding-top: inherit;
+  padding-bottom: inherit;
 }
 
 
@@ -319,6 +333,7 @@
             </div>
         {%- endcase -%}
       {%- endfor -%}
+      </div>
       <div
         class="hero-media-container {% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
         {% if settings.animations_reveal_on_scroll %}
@@ -328,7 +343,6 @@
         <div class="hero-media-glow"></div>
         {{ section.settings.hero_video | video_tag: autoplay: true, loop: true, muted: true, controls: false, image_size: "600px", poster: section.settings.hero_image }}
       </div>
-    </div>
   </div>
   {% if section.settings.background_video != blank %}
     <div class="homepage-hero-background">
