WIP landing page, assembly page

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -457,6 +457,9 @@ h2 {
 
 p {
   font-size: 1.6rem !important;
+    font-weight: 100 !important;
+    letter-spacing: 0.01em !important;
+    line-height: 1.5em !important;
 }
 
 section {
@@ -484,6 +487,8 @@ button,
 textarea {
   border-radius: 0 !important;
   border: none !important;
+  font-size: 1.5rem!important;
+  letter-spacing: 0.1em!important
 }
 
 @media (min-width: 768px) {
@@ -496,7 +501,8 @@ textarea {
   }
 
   p {
-    font-size: 1.4rem !important;
+  font-size: 1.6rem!important
+}
   }
 }
 `;
