--- a/sections/tc-homepage-hero.liquid
+++ b/sections/tc-homepage-hero.liquid
@@ -48,11 +48,11 @@
 .hero-heading {
   font-family: "Inter Tight"
   , sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   color: white;
   font-size: 3.25rem;
   line-height: 1.2em;
-  letter-spacing: -0.01em;
+  letter-spacing: -0.02em;
 }
 
 .hero-heading strong {
@@ -60,7 +60,7 @@
   background-clip: text;
   color: transparent;
   font-optical-sizing: auto;
-  font-weight: 600;
+  font-weight: 800;
   font-style: normal;
 }
 
@@ -87,7 +87,7 @@
 }
 
 .hero-text p:not(:last-child) {
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
   margin-right: 0.5ch;
 }
 
